# cpml

./: .editorconfig  .gitignore  .release.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: ci.yml
benches/: pipeline_benchmarks.rs
docs/: TECH_DEBT.md  examples.md  tutorial.md  workflow.md
docs/adr/: adr-activity-boundary.md  adr-diagnostics.md  adr-field-eval.md  adr-fields.md  adr-geometry.md  adr-keyframes.md  adr-occupancy-unified.md  adr-probe-assert.md  adr-self-exclusion.md  adr-structure-expansion.md  adr-yaml-schema.md
samples/: aidc_diesel_generator_building.cpml  collision_demo.cpml  demands_demo.cpml  full_construction_demo.cpml  occlusion_demo.cpml  presence_permit.cpml  ratefield_demo.cpml  region_hierarchy_demo.cpml  resource_contention.cpml  scalar_progression.cpml
scripts/: pre-commit
src/: comparison.rs  error.rs  lib.rs  main.rs
src/model/: activity.rs  field.rs  geometry.rs  mod.rs  probe.rs  projection.rs
src/output/: compare.rs  console.rs  json.rs  mod.rs
src/pipeline/: dependency_check.rs  expand.rs  field_eval.rs  keyframe.rs  metric.rs  mod.rs  orchestrator.rs  parse.rs  probe_check.rs  resolve.rs
src/schema/: activity.rs  document.rs  geometry.rs  mod.rs  probe.rs  (+2 more)
templates/: README.md
tests/: collisions.rs  comparison.rs  demands.rs  dependencies.rs  full_construction_demo.rs  geometry_boolean.rs  presence_check.rs  ratefield.rs  region_hierarchy.rs  resource_contention.rs  scalar_progression.rs  structure_confidence.rs  template_validation.rs  temporal.rs
(+5 files in other folders)
