[package]
name = "cpml"
version = "0.1.0"
edition = "2021"
description = "Construction Process Modeling Language — declarative DSL for construction process modeling"
license = "Apache-2.0"
authors = ["Song Difei <hfu7565yfu@gmail.com>"]
repository = "https://github.com/IndenScale/cpml"
keywords = ["dsl", "construction", "planning", "verification", "compiler", "domain-specific-language"]
categories = ["compilers", "simulation", "science"]

[[bin]]
name = "cpml"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parry3d = { package = "parry3d-f64", version = "0.26" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline_benchmarks"
harness = false
